# Prom_Tigo

./: .gitignore  Dockerfile  README.md  build-compose.local.yaml  compose.local.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: collector.py  config.py  main.py  metrics.py
test/: test_collector.py  test_config.py  test_smoke.py
