[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prom-tigo"
version = "0.1.0"
description = "Prometheus exporter for near real-time Tigo solar telemetry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Blind Badger Studios" }
]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["test"]
